# Embodied-Intelligence-Platform

./: .gitignore  .pre-commit-config.yaml  CODE_IMPROVEMENTS_SUMMARY.md  CRITICAL_ISSUES_FIXED.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  README.md  WEEK_1_TASKS.md  WEEK_2_TASKS.md  WEEK_4_IMPLEMENTATION_SUMMARY.md  adaptive_safety_learning_validation_prompts.md  advanced_ai_integration_prompts.md  deployment_config.json  docker-compose.yml  immediate_implementation_plan.md  multimodal_safety_config.json  multimodal_safety_fusion_integration_prompts.md  production_deployment_validation_prompts.md  setup.cmd  test_multimodal_integration_results.json
.cursor/rules/: innovator.mdc  mechatronics-engineer.mdc  reviewer.mdc  software-engineer.mdc
.github/workflows/: ci.yml
.windsurf/rules/: 01-development-pipeline.md  10-character-visionary.md  15-ux-ui-designer.md  30-reviewer.md  (+8 more)
Service/: .gitignore  CONTRIBUTING.md  LICENSE
core/eip_slam/: CMakeLists.txt  package.xml  setup.py
core/eip_slam/config/: basic_slam.rviz
core/eip_slam/eip_slam/: basic_slam_node.py
core/eip_slam/launch/: basic_slam_demo.launch.py
docs/: CONTRIBUTING.md
integration/eip_orchestrator/: CMakeLists.txt  package.xml  setup.py
integration/eip_orchestrator/eip_orchestrator/: __init__.py
integration/eip_orchestrator/launch/: full_system_demo.launch.py  llm_demo.launch.py
integration/eip_orchestrator/resource/: eip_orchestrator
intelligence/eip_adaptive_safety/: CMakeLists.txt  package.xml  requirements.txt  setup.py
intelligence/eip_adaptive_safety/config/: adaptive_safety.yaml
intelligence/eip_adaptive_safety/eip_adaptive_safety/: adaptive_learning_engine.py  adaptive_safety_node.py  thread_safe_containers.py
intelligence/eip_adaptive_safety/launch/: adaptive_safety_demo.launch.py
intelligence/eip_adaptive_safety/resource/: eip_adaptive_safety
intelligence/eip_advanced_learning/: CMakeLists.txt  package.xml  setup.py
intelligence/eip_advanced_learning/config/: advanced_learning.yaml
intelligence/eip_advanced_learning/eip_advanced_learning/: __init__.py  learning_engine_node.py
intelligence/eip_advanced_learning/launch/: advanced_learning_demo.launch.py
intelligence/eip_advanced_learning/tests/: test_skill_learning.py
intelligence/eip_cognitive_architecture/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
intelligence/eip_cognitive_architecture/config/: cognitive_architecture.yaml
intelligence/eip_cognitive_architecture/eip_cognitive_architecture/: __init__.py  attention_mechanism.py  cognitive_architecture_node.py  executive_control.py  learning_engine.py  long_term_memory.py  social_intelligence.py  working_memory.py
intelligence/eip_cognitive_architecture/launch/: cognitive_architecture_demo.launch.py
intelligence/eip_cognitive_architecture/tests/: test_attention_mechanism.py  test_executive_control.py  test_memory_systems.py
intelligence/eip_interfaces/: CMakeLists.txt  package.xml
intelligence/eip_interfaces/msg/: EmergencyStop.msg  SafetyVerificationRequest.msg  SafetyVerificationResponse.msg  SafetyViolation.msg  TaskPlan.msg  TaskStep.msg
intelligence/eip_interfaces/srv/: ValidateTaskPlan.srv
intelligence/eip_reasoning_engine/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
intelligence/eip_reasoning_engine/config/: reasoning_engine.yaml
intelligence/eip_reasoning_engine/eip_reasoning_engine/: __init__.py  causal_reasoner.py  multi_modal_reasoner.py  reasoning_engine_node.py  reasoning_orchestrator.py  spatial_reasoner.py  temporal_reasoner.py
intelligence/eip_reasoning_engine/launch/: reasoning_engine_demo.launch.py
intelligence/eip_reasoning_engine/tests/: test_causal_reasoning.py  test_multi_modal_reasoning.py  test_spatial_reasoning.py
intelligence/eip_safety_arbiter/: CMakeLists.txt  package.xml  setup.py
intelligence/eip_safety_arbiter/eip_safety_arbiter/: safety_monitor.py
intelligence/eip_safety_arbiter/launch/: test_llm_safety.launch.py
intelligence/eip_safety_arbiter/resource/: eip_safety_arbiter
intelligence/eip_safety_arbiter/test/: README.md  test_llm_safety_evaluation.py
intelligence/eip_safety_simulator/: CMakeLists.txt  package.xml  setup.py
intelligence/eip_safety_simulator/config/: default_simulation.yaml
intelligence/eip_safety_simulator/eip_safety_simulator/: __init__.py  safety_simulator_node.py
intelligence/eip_safety_simulator/launch/: safety_simulator_demo.launch.py
intelligence/eip_safety_simulator/resource/: eip_safety_simulator
intelligence/eip_social_intelligence/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
intelligence/eip_social_intelligence/config/: social_intelligence.yaml
intelligence/eip_social_intelligence/eip_social_intelligence/: __init__.py  cultural_adaptation.py  emotion_recognizer.py  personality_engine.py  social_behavior_engine.py  social_intelligence_node.py  social_learning.py
intelligence/eip_social_intelligence/launch/: social_intelligence_demo.launch.py
intelligence/eip_social_intelligence/resource/: eip_social_intelligence
intelligence/eip_social_intelligence/tests/: test_cultural_adaptation.py  test_emotion_recognition.py  test_social_behavior.py
reports/: deployment_report_20250705_183738.json
scripts/: IMPLEMENTATION_SUMMARY.md  README_VALIDATION.md  README_health_validator.md  adaptive_safety_health_validator.py  build_all.cmd  build_all.sh  build_and_test.sh  compliance_validator.py  demo_health_validator.py  health_validator_config.json  integration_validator.py  learning_convergence_validator.py  multimodal_safety_integration.py  pattern_validation.py  prepare_deployment.py  production_deployment_validator.py  real_time_performance_validator.py  rule_evolution_validator.py  safety_assurance_validator.py  setup_dev_env.sh  test_all_validators.py  test_health_validator.py  test_multimodal_integration.py  test_new_validators.py  test_validation.py
tools/: generate_performance_report.py  performance_regression.py  safety_performance_regression.py  security_check.sh
(+76 files in other folders)
