<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematype="rng"?>
<package format="3">
  <name>eip_advanced_learning</name>
  <version>0.0.0</version>
  <description>Advanced Learning and Adaptation System for Embodied Intelligence Platform</description>
  <maintainer email="eip@example.com">EIP Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eip_interfaces</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-sklearn</depend>
  <depend>python3-torch</depend>
  <depend>python3-transformers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
