<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eip_cognitive_architecture</name>
  <version>0.1.0</version>
  <description>Cognitive Architecture for Embodied Intelligence Platform</description>
  <maintainer email="ai-team@embodied-intelligence.com">AI Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eip_interfaces</depend>
  <depend>eip_llm_interface</depend>
  <depend>eip_reasoning_engine</depend>
  <depend>eip_vlm_grounding</depend>
  <depend>eip_adaptive_safety</depend>
  <depend>eip_multimodal_safety</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 