<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eip_safety_arbiter</name>
  <version>0.1.0</version>
  <description>Safety verification and behavior arbitration for LLM-guided robotic systems</description>

  <maintainer email="maintainers@embodied-intelligence-platform.org">EIP Team</maintainer>
  <license>Apache-2.0</license>

  <author email="author@embodied-intelligence-platform.org">EIP Contributors</author>

  <url type="website">https://github.com/your-org/embodied-intelligence-platform</url>
  <url type="bugtracker">https://github.com/your-org/embodied-intelligence-platform/issues</url>
  <url type="repository">https://github.com/your-org/embodied-intelligence-platform</url>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Action and service dependencies -->
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Navigation and manipulation -->
  <depend>nav2_msgs</depend>
  <depend>moveit_msgs</depend>

  <!-- Custom EIP interfaces -->
  <depend>eip_interfaces</depend>

  <!-- Python dependencies for LLM integration -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <!-- Build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package> 