<?xml version="1.0"?>
<package format="3">
  <name>eip_social_intelligence</name>
  <version>1.0.0</version>
  <description>Social Intelligence and Human-Robot Interaction package for the Embodied Intelligence Platform</description>
  
  <maintainer email="ai-team@embodied-intelligence.com">AI Team</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eip_interfaces</depend>
  <depend>eip_cognitive_architecture</depend>
  <depend>eip_llm_interface</depend>
  <depend>eip_multimodal_safety</depend>
  
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-transformers</exec_depend>
  <exec_depend>python3-opencv-contrib-python</exec_depend>
  <exec_depend>python3-dlib</exec_depend>
  <exec_depend>python3-speechrecognition</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-nltk</exec_depend>
  <exec_depend>python3-spacy</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 